--- a/LensLauncher/app/src/main/res/values/strings.xml
+++ b/LensLauncher/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
+
+    <!-- App Strings -->
     <string name="app_name">Lens Launcher</string>
+
+    <!-- Settings Strings -->
+    <string name="setting_lens_size">Lens Size</string>
+    <string name="setting_distortion_factor">Distortion Factor</string>
+    <string name="setting_scale_factor">Scale Factor</string>
+    <string name="setting_vibrate_app_hover">Vibrate on App Hover</string>
+    <string name="setting_show_touch_selection">Show Touch Selection</string>
+
 </resources>
