--- a/LensLauncher/app/src/main/res/values/strings.xml
+++ b/LensLauncher/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <!-- Settings Strings -->
     <string name="setting_lens_diameter">Lens Diameter</string>
+    <string name="setting_min_icon_size">Minimum Icon Size</string>
     <string name="setting_distortion_factor">Distortion Factor</string>
     <string name="setting_scale_factor">Scale Factor</string>
     <string name="setting_vibrate_app_hover">Vibrate on App Hover</string>
