Bold 'Lens' in App Name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- App & Activity Strings -->
-    <string name="app_name">Lens Launcher</string>
+    <string name="app_name"><b>Lens</b> Launcher</string>
     <string name="activity_title_about">About</string>
 
     <!-- Settings Strings -->
