--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 
     <!-- Error Strings -->
     <string name="error_app_not_found">App Not Found</string>
-    <string name="error_too_many_apps">Too Many Apps :-(</string>
+    <string name="error_too_many_apps">Failed to Load Apps</string>
 
     <!-- Progress Strings -->
     <string name="progress_loading_apps">Loading Apps</string>
