--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <!-- Error Strings -->
     <string name="error_app_not_found">App Not Found</string>
     <string name="error_too_many_apps">Failed to Load Apps</string>
+    <string name="error_hide_lens_launcher">You can\'t hide Lens Launcher!</string>
+    <string name="error_unable_to_open">Error in Opening App</string>
 
     <!-- Progress Strings -->
     <string name="progress_loading_apps">Loading Apps</string>
